--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
     <style>
         :root {
-            --mg-red: #B22222; /* Exact PDF Red */
+            --mg-red: #B22222; 
             --mg-dark: #121212;
+            --mg-grey: #1a1a1a;
             --white: #ffffff;
             --grey-bg: #f4f4f4;
         }
@@ -42,7 +43,7 @@
         .hero h1 { font-family: 'Montserrat', sans-serif; font-size: clamp(2.5rem, 5vw, 4rem); margin-bottom: 20px; }
         .hero span { color: var(--mg-red); }
 
-        /* --- About Section --- */
+        /* --- About & Slideshow --- */
         .section { padding: 80px 8%; }
         .grid-2 { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; align-items: center; }
 
@@ -52,14 +53,9 @@
         }
         .mySlides img { width: 100%; height: 500px; object-fit: cover; }
 
-        /* --- Team / Testimonial Section --- */
+        /* --- Team Section --- */
         .team-section { background: var(--grey-bg); padding: 100px 5%; text-align: center; }
-        .team-grid { 
-            display: grid; 
-            grid-template-columns: repeat(4, 1fr); 
-            gap: 20px; 
-            margin-top: 50px; 
-        }
+        .team-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-top: 50px; }
         .team-card {
             background: white; padding: 30px 15px; border-radius: 12px;
             box-shadow: 0 8px 25px rgba(0,0,0,0.05); transition: 0.4s ease;
@@ -78,22 +74,63 @@
         th { background: var(--mg-red); color: white; padding: 15px; text-align: left; }
         td { padding: 15px; border-bottom: 1px solid #333; }
 
-        /* --- Application Icons --- */
-        .app-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 40px; }
-        .app-card { background: var(--grey-bg); padding: 30px; text-align: center; transition: 0.3s; }
-        .app-card:hover { background: var(--mg-red); color: white; transform: translateY(-10px); }
-        .app-card i { font-size: 2.5rem; margin-bottom: 15px; }
+        /* --- ADVANCED FOOTER --- */
+        .main-footer {
+            background: #0a0a0a;
+            color: #ffffff;
+            padding: 80px 8% 20px;
+            font-size: 0.9rem;
+        }
+        .footer-grid {
+            display: grid;
+            grid-template-columns: 2fr 1fr 1fr 1.5fr;
+            gap: 40px;
+            margin-bottom: 50px;
+        }
+        .footer-col h4 {
+            font-family: 'Montserrat';
+            color: var(--mg-red);
+            font-size: 1.2rem;
+            margin-bottom: 25px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+        .footer-col p { color: #bbb; line-height: 1.8; margin-bottom: 15px; }
+        .footer-col ul { list-style: none; }
+        .footer-col ul li { margin-bottom: 12px; }
+        .footer-col ul li a { color: #bbb; text-decoration: none; transition: 0.3s; }
+        .footer-col ul li a:hover { color: var(--mg-red); padding-left: 5px; }
+        
+        .social-links { display: flex; gap: 15px; margin-top: 20px; }
+        .social-links a {
+            width: 35px; height: 35px; background: #222;
+            display: flex; align-items: center; justify-content: center;
+            border-radius: 50%; color: white; text-decoration: none; transition: 0.3s;
+        }
+        .social-links a:hover { background: var(--mg-red); transform: scale(1.1); }
 
-        /* --- Footer --- */
-        footer { background: #000; color: #888; padding: 60px 8% 20px; text-align: center; }
+        .footer-bottom {
+            border-top: 1px solid #222;
+            padding-top: 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            color: #666;
+        }
+        .certification-logos { display: flex; gap: 20px; opacity: 0.6; }
+        .certification-logos i { font-size: 1.5rem; }
 
         /* --- Responsive --- */
-        @media (max-width: 1200px) { .team-grid { grid-template-columns: repeat(2, 1fr); } }
+        @media (max-width: 1200px) { 
+            .team-grid { grid-template-columns: repeat(2, 1fr); } 
+            .footer-grid { grid-template-columns: 1fr 1fr; }
+        }
         @media (max-width: 768px) { 
-            .grid-2 { grid-template-columns: 1fr; text-align: center; } 
+            .grid-2, .footer-grid { grid-template-columns: 1fr; } 
             .team-grid { grid-template-columns: 1fr; }
-            .slideshow-container { margin: 0 auto; height: 350px; }
-            .mySlides img { height: 350px; }
+            .slideshow-container { margin: 0 auto; height: 300px; }
+            .footer-bottom { justify-content: center; text-align: center; gap: 20px; }
         }
 
         .fade { animation: fadeEffect 1.5s; }
@@ -110,7 +147,7 @@
     <header class="hero">
         <div data-aos="zoom-in">
             <h1>TECHNICAL GRADE <span>UREA</span></h1>
-            <p style="font-size: 1.2rem;">Innovating Chemical Solutions | Now in Punjab</p>
+            <p style="font-size: 1.2rem;">Innovating Chemical Solutions | Direct Importers</p>
             <br>
             <a href="#specs" style="background:var(--mg-red); color:white; padding:15px 30px; text-decoration:none; font-weight:bold; border-radius:5px;">Check Lab Report</a>
         </div>
@@ -132,63 +169,52 @@
             <ul style="margin-top:25px; list-style:none;">
                 <li style="margin-bottom:15px;"><i class="fas fa-check-circle" style="color:var(--mg-red); margin-right:12px;"></i> Established: 2017</li>
                 <li style="margin-bottom:15px;"><i class="fas fa-check-circle" style="color:var(--mg-red); margin-right:12px;"></i> Crystal Clear Quality</li>
-                <li style="margin-bottom:15px;"><i class="fas fa-check-circle" style="color:var(--mg-red); margin-right:12px;"></i> Pan India Delivery</li>
-                <li><i class="fas fa-check-circle" style="color:var(--mg-red); margin-right:12px;"></i> Locations: Haryana, Punjab, Karnataka</li>
+                <li style="margin-bottom:15px;"><i class="fas fa-check-circle" style="color:var(--mg-red); margin-right:12px;"></i> All India Delivery</li>
+                <li><i class="fas fa-check-circle" style="color:var(--mg-red); margin-right:12px;"></i> Haryana | Punjab | Karnataka</li>
             </ul>
         </div>
     </section>
 
     <section class="team-section">
         <div data-aos="fade-up">
-            <h2 style="font-family:'Montserrat'; font-size:2.5rem; margin-bottom:10px;">MEET OUR <span style="color:var(--mg-red)">LEADERSHIP</span></h2>
-            <p>The experts driving MG Chemicals' commitment to excellence.</p>
+            <h2 style="font-family:'Montserrat'; font-size:2.5rem; margin-bottom:10px;">CORE <span style="color:var(--mg-red)">LEADERSHIP</span></h2>
+            <p>Driving integrity and excellence at MGCHEMICALS.</p>
         </div>
-
         <div class="team-grid">
             <div class="team-card" data-aos="fade-up">
-                <img src="testi1.jpeg" class="team-img" alt="MD">
+                <img src="testi1.jpeg" class="team-img">
                 <h3>VISHAL</h3>
                 <span>Managing Director</span>
-                <p>Strategic leader overseeing business development and operations. Committed to ethical practices and ensuring alignment with the company’s vision for market expansion.</p>
+                <p>Strategic leader overseeing growth and operations. Committed to ethical practices and reliability.</p>
             </div>
-
             <div class="team-card" data-aos="fade-up" data-aos-delay="100">
-                <img src="testi2.jpeg" class="team-img" alt="CA">
+                <img src="testi2.jpeg" class="team-img">
                 <h3>FINANCE TEAM</h3>
-                <span>Chartered Accountant (CA)</span>
-                <p>Qualified expert managing taxation, auditing, and GST compliance. Ensures financial integrity and transparency to support sustainable growth.</p>
+                <span>Chartered Accountant</span>
+                <p>Managing taxation, auditing, and GST compliance. Ensuring full financial integrity.</p>
             </div>
-
             <div class="team-card" data-aos="fade-up" data-aos-delay="200">
-                <img src="testi3.jpeg" class="team-img" alt="Legal">
+                <img src="testi3.jpeg" class="team-img">
                 <h3>LEGAL COUNCIL</h3>
                 <span>Legal Professional</span>
-                <p>Expert in commercial law, handling contract drafting and negotiations. Mitigates legal risks and safeguards company interests across all operations.</p>
+                <p>Expert in contract drafting and commercial law. Safeguarding company and client interests.</p>
             </div>
-
             <div class="team-card" data-aos="fade-up" data-aos-delay="300">
-                <img src="testi4.jpeg" class="team-img" alt="Legal Advisor">
+                <img src="testi4.jpeg" class="team-img">
                 <h3>LEGAL ADVISOR</h3>
                 <span>Legal Professional</span>
-                <p>Provides proactive legal guidance and ensures statutory compliance. Manages due diligence and legal documentation for smooth long-term stability.</p>
+                <p>Ensuring statutory compliance and providing proactive legal guidance for smooth operations.</p>
             </div>
         </div>
     </section>
 
     <section class="specs-area" id="specs">
-        <h2 style="text-align:center; font-family:'Montserrat';">TECHNICAL SPECIFICATIONS (N46)</h2>
+        <h2 style="text-align:center; font-family:'Montserrat'; margin-bottom: 30px;">TECHNICAL SPECIFICATIONS (N46)</h2>
         
-
-
-
         <div class="table-wrap" data-aos="fade-up">
             <table>
                 <thead>
-                    <tr>
-                        <th>Parameter</th>
-                        <th>Standard Value</th>
-                        <th>Test Method</th>
-                    </tr>
+                    <tr><th>Parameter</th><th>Value</th><th>Test Method</th></tr>
                 </thead>
                 <tbody>
                     <tr><td>Nitrogen Content</td><td>46% Min</td><td>ISO 5315</td></tr>
@@ -196,41 +222,61 @@
                     <tr><td>Biuret Content</td><td>1.00% Max</td><td>ISO 2754</td></tr>
                     <tr><td>Iron (Fe)</td><td>1.00 PPM Max</td><td>ISO 22241</td></tr>
                     <tr><td>Melting Point</td><td>132°C</td><td>ISO 2759</td></tr>
-                    <tr><td>Crushing Strength</td><td>1.00 Kg Min</td><td>3.18mm Dia</td></tr>
                 </tbody>
             </table>
         </div>
     </section>
 
-    <section class="section container">
-        <h2 style="text-align:center; font-family:'Montserrat'; margin-bottom:40px;">INDUSTRIAL APPLICATIONS</h2>
-        <div class="app-grid">
-            <div class="app-card" data-aos="fade-up">
-                <i class="fas fa-pills"></i>
-                <h4>Pharmaceuticals</h4>
+    <footer class="main-footer">
+        <div class="footer-grid">
+            <div class="footer-col">
+                <h4 style="color: white; font-weight: 800;">MG<span style="color: var(--mg-red);">CHEMICALS</span></h4>
+                <p>Leading direct importers and traders of industrial chemicals since 2017. We bridge the gap between quality manufacturing and industrial requirements across Pan India.</p>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
             </div>
-            <div class="app-card" data-aos="fade-up" data-aos-delay="100">
-                <i class="fas fa-fill-drip"></i>
-                <h4>Resins & Adhesives</h4>
-            </div>
-            <div class="app-card" data-aos="fade-up" data-aos-delay="200">
-                <i class="fas fa-shirt"></i>
-                <h4>Textile Processing</h4>
-            </div>
-            <div class="app-card" data-aos="fade-up" data-aos-delay="300">
-                <i class="fas fa-water"></i>
-                <h4>Water Treatment</h4>
-            </div>
-        </div>
-    </section>
 
-    <footer>
-        <div class="contact-info">
-            <h3 style="font-family:'Montserrat'; margin-bottom:15px;">MGCHEMICALS</h3>
-            <p>Hansi-Chandigarh Highway, Shekhpura, Hansi, Haryana - 125033</p>
-            <p>Email: mgchemicals98@gmail.com | Phone: +91-9253464520</p>
+            <div class="footer-col">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#specs">Lab Reports</a></li>
+                    <li><a href="#">Applications</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Industries</h4>
+                <ul>
+                    <li><a href="#">Pharmaceuticals</a></li>
+                    <li><a href="#">Resins & Adhesives</a></li>
+                    <li><a href="#">Textile Industry</a></li>
+                    <li><a href="#">Water Treatment</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p><i class="fas fa-map-marker-alt" style="color: var(--mg-red); margin-right: 10px;"></i> Hansi-Chandigarh Highway, Hansi, Haryana - 125033</p>
+                <p><i class="fas fa-envelope" style="color: var(--mg-red); margin-right: 10px;"></i> mgchemicals98@gmail.com</p>
+                <p><i class="fas fa-phone-alt" style="color: var(--mg-red); margin-right: 10px;"></i> +91-9253464520</p>
+            </div>
         </div>
-        <p>&copy; 2026 MGCHEMICALS. All India Delivery | Quality Guaranteed.</p>
+
+        <div class="footer-bottom">
+            <p>&copy; 2026 MGCHEMICALS. All Rights Reserved. Designed for Excellence.</p>
+            <div class="certification-logos">
+                <i class="fas fa-shield-alt" title="Quality Guaranteed"></i>
+                <i class="fas fa-truck" title="Pan India Delivery"></i>
+                <i class="fas fa-flask" title="ISO Tested"></i>
+            </div>
+        </div>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
