--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
             <p style="margin-top:10px;">The expertise driving excellence at MGCHEMICALS.</p>
         </div>
         <div class="team-grid">
-            <div class="team-card"><img src="testi4.jpeg" class="team-img"><h3>LEGAL ADVISOR</h3><span>Legal Professional</span><p>Managing statutory compliance and legal guidance.</p></div>
-            <div class="team-card"><img src="testi1.jpeg" class="team-img"><h3>VISHAL</h3><span>Managing Director</span><p>Strategic growth and operational oversight leader.</p></div>
-            <div class="team-card"><img src="testi2.jpeg" class="team-img"><h3>FINANCE TEAM</h3><span>Chartered Accountant</span><p>Ensuring financial integrity and GST compliance.</p></div>
-            <div class="team-card"><img src="testi3.jpeg" class="team-img"><h3>LEGAL COUNCIL</h3><span>Legal Professional</span><p>Expert in commercial laws and contract drafting.</p></div>
+            <div class="team-card"><img src="testi4.jpeg" class="team-img"><h3>Ravi Kant Sharma</h3><span>Legal Professional</span><p>Managing statutory compliance and legal guidance.</p></div>
+            <div class="team-card"><img src="testi1.jpeg" class="team-img"><h3>Suraj Kasera</h3><span>Managing Director</span><p>Strategic growth and operational oversight leader.</p></div>
+            <div class="team-card"><img src="testi2.jpeg" class="team-img"><h3>Anand Sindhu</h3><span>Chartered Accountant</span><p>Ensuring financial integrity and GST compliance.</p></div>
+            <div class="team-card"><img src="testi3.jpeg" class="team-img"><h3>Vishal Grewal</h3><span>Legal Professional</span><p>Expert in commercial laws and contract drafting.</p></div>
         </div>
     </section>
 
