--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <section class="contact-section" id="contact-us">
         <div class="contact-container" data-aos="fade-up">
             <h2 class="section-title" style="margin-bottom:20px">ENQUIRY <span style="color:var(--mg-red)">FORM</span></h2>
-            <form action="https://formspree.io/f/adityaanuraag143@gmail.com" method="POST">
+            <form action="https://formspree.io/f/xkobqbql" method="POST">
                 <div class="form-group"><label>Full Name</label><input type="text" name="name" required></div>
                 <div class="form-group"><label>Email</label><input type="email" name="email" required></div>
                 <div class="form-group"><label>Phone Number</label><input type="tel" name="phone" required></div>
