--- a/index.html
+++ b/index.html
@@ -229,6 +229,22 @@
                     <label>Message</label>
                     <textarea name="message" rows="5" placeholder="How can we help you?" required></textarea>
                 </div>
+                <div class="form-group">
+                    <label>Name of Industry / Firm</label>
+                    <input type="text" name="name" placeholder="Enter your name" required>
+                </div>
+                <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" name="name" placeholder="Enter your name" required>
+                </div>
+                   <div class="form-group">
+                    <label>State</label>
+                    <input type="text" name="name" placeholder="Enter your name" required>
+                </div>
+                <div class="form-group">
+                    <label>District</label>
+                    <input type="text" name="name" placeholder="Enter your name" required>
+                </div>
                 <button type="submit" id="submit-btn" class="submit-btn">Send Message</button>
                 <div id="form-status"></div>
             </form>
